--- a/i3wm.service
+++ b/i3wm.service
@@ -1,11 +1,8 @@
 
 [Unit]
 Description=i3 Window Manager
-Requires=dbus.socket
+After=dbus.socket
 
 [Service]
 ExecStart=/usr/bin/i3
-
-[Install]
-WantedBy=i3.target
 
